--- a/tools.html
+++ b/tools.html
@@ -40,7 +40,7 @@
             <li>Proposal + milestones guidance</li>
           </ul>
           <p class="small muted">Rule: link to canonical docs; don’t copy sensitive content into this repo.</p>
-          <a class="text-link" href="#">Canonical docs hub (placeholder) →</a>
+          <a class="text-link" href="#" target="_blank" rel="noopener">Canonical docs hub (placeholder) →</a>
         </div>
 
         <div class="card">
@@ -73,4 +73,3 @@
   </main>
 </body>
 </html>
-
