--- a/start.html
+++ b/start.html
@@ -27,14 +27,14 @@
   <main class="container page">
     <h1>Start: First 60 minutes</h1>
     <p class="lead">
-      The goal is to get you unblocked fast, then help you build a stable working rhythm.
+      The goal is to get you started fast, then help you build a stable working rhythm.
     </p>
 
     <section class="section" id="fast-path">
       <h2>Fast path (do this first)</h2>
       <ol class="steps">
         <li>
-          <strong>Open the canonical onboarding doc</strong> and skim the “overview” section.
+          <strong>Open the onboarding doc</strong> and skim the “overview” section.
           <div class="hint">Link: <a href="#" target="_blank" rel="noopener">Onboarding doc (placeholder)</a></div>
         </li>
         <li>
