--- a/github.html
+++ b/github.html
@@ -71,7 +71,7 @@
     </section>
 
     <section class="section">
-      <h2>PR hygiene (minimum standard)</h2>
+      <h2>communication best practices</h2>
       <div class="card">
         <ul class="list">
           <li>Clear title: “Fix X”, “Add Y”, not “updates”</li>
